--- a/Gopaddi/VC/Onboarding/OnboardingFirstCell.xib
+++ b/Gopaddi/VC/Onboarding/OnboardingFirstCell.xib
@@ -4,95 +4,108 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OnboardingFirstCell" id="gTV-IL-0wX" customClass="OnboardingFirstCell" customModule="Gopaddi" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="271" height="496"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OnboardingFirstCell" id="xdk-RM-nVM" customClass="OnboardingFirstCell" customModule="Gopaddi" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="301" height="561"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="271" height="496"/>
+                <rect key="frame" x="0.0" y="0.0" width="301" height="561"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x2h-NB-8mj">
-                        <rect key="frame" x="0.0" y="0.0" width="271" height="496"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IdE-Rb-xSy">
+                        <rect key="frame" x="0.0" y="0.0" width="301" height="561"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Onboarding1" translatesAutoresizingMaskIntoConstraints="NO" id="QfF-hG-ob6">
-                                <rect key="frame" x="20" y="40" width="251" height="150"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="WZN-xV-dyZ"/>
-                                    <constraint firstAttribute="width" constant="251" id="axp-DY-HwC"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Gopaddi !!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xSo-ap-2Ag">
-                                <rect key="frame" x="49.000000000000014" y="220" width="173.33333333333337" height="26"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="173.33000000000001" id="EfK-lE-lju"/>
-                                    <constraint firstAttribute="height" constant="26" id="gpE-Rh-LL8"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bXn-wF-EvR">
-                                <rect key="frame" x="5" y="254.00000000000003" width="261" height="38.333333333333343"/>
-                                <string key="text">Welcome to Gopaddi, your one-stop shop for unforgettable travel experiences!  Dive into curated getaways, explore hidden gems, and unlock exclusive deals. Let's turn your travel dreams into memories that last a lifetime. Explore with us! </string>
-                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="8"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="sQD-zi-RBW">
-                                <rect key="frame" x="0.0" y="396" width="271" height="100"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x2h-NB-8mj">
+                                <rect key="frame" x="0.0" y="0.0" width="301" height="561"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Onboarding2" translatesAutoresizingMaskIntoConstraints="NO" id="YG6-4Y-RUV">
-                                        <rect key="frame" x="0.0" y="0.0" width="271" height="50"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Onboarding1" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QfF-hG-ob6">
+                                        <rect key="frame" x="50" y="60" width="251" height="150"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="150" id="DRt-nP-GrT"/>
+                                        </constraints>
                                     </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="EPd-2i-837">
-                                        <rect key="frame" x="0.0" y="50" width="271" height="50"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Gopaddi !!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xSo-ap-2Ag">
+                                        <rect key="frame" x="54.333333333333329" y="240" width="192.33333333333337" height="26"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="26" id="QXE-hI-gdx"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bXn-wF-EvR">
+                                        <rect key="frame" x="5" y="274" width="291" height="70"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="70" id="Ol3-VR-X7a"/>
+                                        </constraints>
+                                        <string key="text">Welcome to Gopaddi, your one-stop shop for unforgettable travel experiences!  Dive into curated getaways, explore hidden gems, and unlock exclusive deals. Let's turn your travel dreams into memories that last a lifetime. Explore with us! </string>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="9"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="N1x-Td-eak">
+                                        <rect key="frame" x="0.0" y="411" width="301" height="150"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group" translatesAutoresizingMaskIntoConstraints="NO" id="8HS-I5-Lcw">
-                                                <rect key="frame" x="0.0" y="0.0" width="271" height="50"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Onboarding2" translatesAutoresizingMaskIntoConstraints="NO" id="xXu-yr-lh7">
+                                                <rect key="frame" x="0.0" y="0.0" width="301" height="75"/>
+                                            </imageView>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group" translatesAutoresizingMaskIntoConstraints="NO" id="GnF-dG-nUD">
+                                                <rect key="frame" x="0.0" y="75" width="301" height="75"/>
                                             </imageView>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="150" id="bCg-L7-83q"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.32941176470588235" blue="0.89411764705882346" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="RZA-eJ-CvE"/>
+                                    <constraint firstAttribute="bottom" secondItem="N1x-Td-eak" secondAttribute="bottom" id="7HX-ae-56p"/>
+                                    <constraint firstItem="bXn-wF-EvR" firstAttribute="leading" secondItem="x2h-NB-8mj" secondAttribute="leading" constant="5" id="J7Z-co-Zgz"/>
+                                    <constraint firstItem="xSo-ap-2Ag" firstAttribute="centerX" secondItem="x2h-NB-8mj" secondAttribute="centerX" id="Jk1-fd-sO8"/>
+                                    <constraint firstItem="QfF-hG-ob6" firstAttribute="top" secondItem="x2h-NB-8mj" secondAttribute="top" constant="60" id="JnJ-hC-cfA"/>
+                                    <constraint firstItem="xSo-ap-2Ag" firstAttribute="top" secondItem="QfF-hG-ob6" secondAttribute="bottom" constant="30" id="Koe-U0-DDT"/>
+                                    <constraint firstItem="N1x-Td-eak" firstAttribute="leading" secondItem="x2h-NB-8mj" secondAttribute="leading" id="VV3-AC-emj"/>
+                                    <constraint firstAttribute="trailing" secondItem="QfF-hG-ob6" secondAttribute="trailing" id="Zd5-sz-XFZ"/>
+                                    <constraint firstItem="QfF-hG-ob6" firstAttribute="leading" secondItem="x2h-NB-8mj" secondAttribute="leading" constant="50" id="bPo-zM-kpd"/>
+                                    <constraint firstAttribute="trailing" secondItem="bXn-wF-EvR" secondAttribute="trailing" constant="5" id="eZl-17-ltg"/>
+                                    <constraint firstItem="bXn-wF-EvR" firstAttribute="top" secondItem="xSo-ap-2Ag" secondAttribute="bottom" constant="8" id="uUd-wP-dtp"/>
+                                    <constraint firstAttribute="trailing" secondItem="N1x-Td-eak" secondAttribute="trailing" id="uWi-XH-h5s"/>
                                 </constraints>
-                            </stackView>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.32941176470588235" blue="0.89411764705882346" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="xSo-ap-2Ag" firstAttribute="top" secondItem="QfF-hG-ob6" secondAttribute="bottom" constant="30" id="9vW-xb-jgG"/>
-                            <constraint firstItem="xSo-ap-2Ag" firstAttribute="centerX" secondItem="x2h-NB-8mj" secondAttribute="centerX" id="CfN-Al-vNO"/>
-                            <constraint firstAttribute="trailing" secondItem="QfF-hG-ob6" secondAttribute="trailing" id="FaN-e7-qAP"/>
-                            <constraint firstItem="bXn-wF-EvR" firstAttribute="top" secondItem="xSo-ap-2Ag" secondAttribute="bottom" constant="8" id="ZO6-aE-2gA"/>
-                            <constraint firstAttribute="trailing" secondItem="bXn-wF-EvR" secondAttribute="trailing" constant="5" id="eqa-i4-1b9"/>
-                            <constraint firstAttribute="trailing" secondItem="sQD-zi-RBW" secondAttribute="trailing" id="h8l-Fk-fBi"/>
-                            <constraint firstItem="QfF-hG-ob6" firstAttribute="top" secondItem="x2h-NB-8mj" secondAttribute="top" constant="40" id="i0P-RV-mi9"/>
-                            <constraint firstItem="bXn-wF-EvR" firstAttribute="leading" secondItem="x2h-NB-8mj" secondAttribute="leading" constant="5" id="p95-YF-3V4"/>
-                            <constraint firstItem="sQD-zi-RBW" firstAttribute="leading" secondItem="x2h-NB-8mj" secondAttribute="leading" id="pI1-hd-frX"/>
-                            <constraint firstAttribute="bottom" secondItem="sQD-zi-RBW" secondAttribute="bottom" id="u9i-io-2CY"/>
+                            <constraint firstItem="x2h-NB-8mj" firstAttribute="top" secondItem="IdE-Rb-xSy" secondAttribute="top" id="8nj-JE-dmR"/>
+                            <constraint firstAttribute="trailing" secondItem="x2h-NB-8mj" secondAttribute="trailing" id="MZx-kU-4Is"/>
+                            <constraint firstAttribute="bottom" secondItem="x2h-NB-8mj" secondAttribute="bottom" id="dbl-Ch-fTC"/>
+                            <constraint firstItem="x2h-NB-8mj" firstAttribute="leading" secondItem="IdE-Rb-xSy" secondAttribute="leading" id="h1C-c9-PJH"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <viewLayoutGuide key="safeArea" id="Mkl-3M-EVH"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="x2h-NB-8mj" secondAttribute="bottom" id="3zN-mp-RWr"/>
-                <constraint firstItem="x2h-NB-8mj" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="HDi-xu-C9d"/>
-                <constraint firstAttribute="trailing" secondItem="x2h-NB-8mj" secondAttribute="trailing" id="U10-YB-Dsn"/>
-                <constraint firstItem="x2h-NB-8mj" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="UOp-AQ-cT3"/>
+                <constraint firstItem="IdE-Rb-xSy" firstAttribute="leading" secondItem="xdk-RM-nVM" secondAttribute="leading" id="3Dk-9m-DwY"/>
+                <constraint firstItem="IdE-Rb-xSy" firstAttribute="top" secondItem="xdk-RM-nVM" secondAttribute="top" id="J1Z-xQ-Itk"/>
+                <constraint firstAttribute="bottom" secondItem="IdE-Rb-xSy" secondAttribute="bottom" id="UfX-ms-adD"/>
+                <constraint firstAttribute="trailing" secondItem="IdE-Rb-xSy" secondAttribute="trailing" id="YDg-4m-aDK"/>
             </constraints>
-            <size key="customSize" width="271" height="496"/>
-            <point key="canvasLocation" x="-179.38931297709922" y="15.492957746478874"/>
+            <size key="customSize" width="301" height="561"/>
+            <point key="canvasLocation" x="370.2290076335878" y="37.676056338028168"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="Group" width="430" height="81"/>
         <image name="Onboarding1" width="380" height="210"/>
         <image name="Onboarding2" width="430" height="110"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
